# ip2

./: Dockerfile
AssociationRules/: .gitlab-ci.yml  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
AssociationRules/html/: annotated.html  annotated_dup.js  class_main_window-members.html  class_main_window.html  classes.html  doxygen_crawl.html  files.html  hierarchy.html  mainwindow_8h_source.html  navtreeindex0.js
AssociationRules/latex/: class_main_window.tex  mainwindow_8h_source.tex  refman.tex
AssociationRules/resources/Distance/: vec1.txt  vec2.txt
AssociationRules/resources/Frequent Itemset/: bible.txt  eazy.txt  input4_10000.txt  input5_10000.txt  input6_10000.txt  output.txt  vec2.txt
AssociationRules/resources/Grid/: input4_100000.txt  input5_100000.txt  input6_100000.txt  output.txt
AssociationRules/tabs/Distance/: distance.cpp  distance.h
AssociationRules/tabs/FrequentItemset/: frequentitemset.cpp  frequentitemset.h
AssociationRules/tabs/Grid/: grid.cpp  grid.h
AssociationRules/tabs/RareItemset/: rareitemset.cpp  rareitemset.h
